z-index fix

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -171,7 +171,7 @@ nav {
         width: 100%;
         height: 100%;
         background-color: white;
-        z-index: 1;
+        z-index: 100;
         align-items: center;
         flex-direction: column;
         transition: none;
